# erso

./: .gitignore  README.md  prompt.md
engine/: CMakeLists.txt  compile_commands.json
engine/assets/shaders/common/: pbr.glsl  shadow.glsl  uniforms.glsl
engine/assets/shaders/debug/: debug.frag  debug.vert
engine/assets/shaders/geometry/: cube.frag  cube.vert  gbuffer.frag  gbuffer.vert
engine/assets/shaders/lighting/: lighting.frag  lighting.vert
engine/assets/shaders/post/: blit.frag  blit.vert  bloom.frag  bloom_blur.frag  bloom_threshold.frag  fxaa.frag  tonemap.frag
engine/assets/shaders/shadow/: shadow.frag  shadow.vert
engine/cmake/: FetchDependencies.cmake
engine/src/: CMakeLists.txt  stb_impl.cpp
engine/src/app/: Application.cpp  Application.hpp  DebugUI.cpp  DebugUI.hpp  main.cpp
engine/src/core/: Assert.hpp  FileSystem.cpp  FileSystem.hpp  Frustum.cpp  Frustum.hpp  Geometry.hpp  Log.cpp  Log.hpp  Timer.cpp  Timer.hpp
engine/src/core/Memory/: HandlePool.hpp  LinearAllocator.cpp  LinearAllocator.hpp
engine/src/platform/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
engine/src/renderer/backend/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
engine/src/renderer/debug/: DebugRenderer.cpp  DebugRenderer.hpp  GPUTimer.cpp  GPUTimer.hpp
engine/src/renderer/frontend/: RenderCommand.hpp  RenderPass.hpp  RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp  UniformData.hpp
engine/src/renderer/frontend/passes/: GeometryPass.cpp  GeometryPass.hpp  LightingPass.cpp  LightingPass.hpp  PostProcessPass.cpp  PostProcessPass.hpp  ShadowPass.cpp  ShadowPass.hpp
engine/src/resources/: GPUMesh.hpp  Material.hpp  MeshBuffer.cpp  MeshBuffer.hpp  MeshLoader.cpp  MeshLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderPreprocessor.cpp  ShaderPreprocessor.hpp
engine/src/scene/: Scene.cpp  Scene.hpp
engine/src/scene/ecs/: Components.hpp  Registry.hpp  System.hpp
engine/src/scene/systems/: CameraSystem.cpp  CameraSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformSystem.cpp  TransformSystem.hpp
